Jake - just getting ready
============================================================================================
:EagleoutIce for Lilly
============================================================================================

JAKE:

    + Jake kann nun Dateien kompilieren die er erhält wie der C++-Bruder,
      Weiter wurden Module wir NameMaps portiert UND erweitert (String-sensitiv)

    + Das Hooks-Modul wurde integriert

    + Es wurden Tests für das NameMaps Modul hinzugefügt

    + JavaJake hat nun auch Autocomplete (für alle gängigen Unixioden-Shells
      und, theoretisch, iTerm2/MacOS per se)

    * Installation hat nun full-headless support

    ! Das Buildrules-Modul wurde für den Druck-Version Fehler gefixt, weiter wurde die
      escape und typo-problematik wurden behoben. Weiter haben ÜB nun wieder
      Nameprefix-Unterstützung

LILLY:

    + Einige weitere Pakete sind nun Eigenständig

    * Mathe-Paket ist nun gezeigt unabhängig von LILLY

    * Beispiele Portiert

    ! TODO: MAKE BOXxCONTROLLER standalone too

============================================================================================
:

Signed-off-by: EagleoutIce <maeusepiep99@web.de>